--- a/css/main.css
+++ b/css/main.css
@@ -15,18 +15,15 @@ body {
   border: 10px solid white;
   -moz-border-radius: 150px;
   -webkit-border-radius: 150px;
-  border-radius: 180px;
+  border-radius: 200px;
 }
 
 .hand {
+  transform: translateX(-20px);
   width: 150px;
   height: 0px;
   border: 5px solid white;
   position: absolute;
   top:50%;
   transform-origin: right;
-}
-
-.hours{
-    transform: rotate(90deg);
 }
