--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,12 @@
 body {
   background-color: #171520;
   background-size: cover;
+}
+
+.clock {
   display:flex;
   flex:1;
-  min-height: 100vh;
+  min-height: 80vh;
   align-items: center;
   justify-content: center;
   margin: 0px;
@@ -16,14 +19,22 @@ body {
   -moz-border-radius: 150px;
   -webkit-border-radius: 150px;
   border-radius: 200px;
+  transform: translateY(-3px);
 }
 
 .hand {
-  transform: translateX(-20px);
   width: 150px;
   height: 0px;
-  border: 5px solid white;
+  border: 1px solid white;
   position: absolute;
   top:50%;
   transform-origin: right;
+}
+
+.digital-clock {
+  text-align: center;
+  margin: 0px;
+  font-family: 'Quantico';
+  font-size: 80px;
+  color: white;
 }
